# ccget

./: .gitignore  README.md  pyproject.toml
docs/: ccget.drawio
resources/: shards.json
scripts/: copy_shard.py  create_role.py  replicate_warc_paths.py  restore_shard.py
src/ccget/: aws.py  consts.py  paths.py  shards.py
