[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ccget"
authors = [
  {name = "Russell Authur", email = "russell.authur@gmail.com"},
  {name = "Luca Soldaini", email = "luca@soldaini.net"},
  {name = "Kyle Lo", email = "kylel@allenai.org"}
]
maintainers = [
  {name = "Luca Soldaini", email = "luca@soldaini.net"},
  {name = "Kyle Lo", email = "kylel@allenai.org"}
]
description = "Sample and archive Common Crawl data to S3"
readme = "README.md"
requires-python = ">=3.9"
keywords = []
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "boto3>=1.26.0",
    "smart-open>=6.0.0",
    "python-dateutil>=2.8.2",
    ]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/allenai/ccget"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.ruff]
line-length = 88
ignore = ["E741"]

[project.scripts]
ccget = "ccget:run_cli"
